--- a/src/app/component/card/card.component.scss
+++ b/src/app/component/card/card.component.scss
@@ -1,3 +1,10 @@
+.item-selected{
+    span{
+
+    color: #1d2939;
+    font-weight: 700;    }
+}
+
 .card{
     margin:10px 10px 10px 10px;
     padding: 10px;
@@ -12,7 +19,7 @@
             font-weight: 500;
             color: #344054;
             margin-top: 5px;
-            height: 164.48px;
+            height: 94px;
             overflow-y: hidden;
 
         }
